--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>  
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit beatae debitis temporibus non consequatur tenetur veniam nulla, aperiam assumenda rem quod praesentium labore nam sunt quam ut laudantium dicta voluptate.</p>
         </article>
         <article>
-            <h2>Argito 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Java</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolores debitis repellendus sint quas, rerum facilis facere deleniti incidunt, molestiae numquam reiciendis illo iste totam quaerat quae perspiciatis eaque non?</p>
         </article>
     </main>
 </body>
