--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <head>  
             <h1>Cursos Gratis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit beatae debitis temporibus non consequatur tenetur veniam nulla, aperiam assumenda rem quod praesentium labore nam sunt quam ut laudantium dicta voluptate.</p>
+            </p><a href="curso-js.html"><p>Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de Java</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolores debitis repellendus sint quas, rerum facilis facere deleniti incidunt, molestiae numquam reiciendis illo iste totam quaerat quae perspiciatis eaque non?</p>
+        </p><a href="curso-js.html"><p>Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
